FIX: Logo sticking out form border for smaller devices

--- a/src/main/resources/static/css/sign-in.css
+++ b/src/main/resources/static/css/sign-in.css
@@ -14,7 +14,7 @@ body{
     width: 70%;
     height: 70%;
     min-width: 350px;
-    min-height: 550px;
+    min-height: 650px;
     max-width: 650px;
     max-height: 650px;
     top: 50%;
